--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
     <ul class="list-group">
     <li class="list-group-item list-group-item-dark">Drag and drop tiles of the same rank to merge them.</li>
     <li class="list-group-item list-group-item-dark">When you reach a peak, cash in to run again with perks!</li>
-    <li class="list-group-item list-group-item-dark">WIP - Join us on stream as we complete this game together!</li>
-    <a href="https://kick.com/sinropa" target="_blank" class="badge badge-dark">Kick Channel</a></div></div>
+    <a href="https://sinropa.github.io/Merger/" target="_blank" class="badge badge-dark">LET ME PLAY</a></div></div>
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
